Feat:: FrontEnd com filtros, listagem e crud

--- a/.gitignore
+++ b/.gitignore
@@ -1,65 +1,2 @@
-############################
-# Maven
-target/
-*.jar
-*.war
-*.ear
 
-###########################
-# Logs
-*.log
-logs/
-log/
-
-############################
-# IntelliJ IDEA
-.idea/
-*.iml
-out/
-
-###########################
-# Eclipse
-.project
-.classpath
-.settings/
-bin/
-
-############################
-# VS Code
-.vscode/
-
-########################
-# Sistema Operacional
-
-# Windows
-Thumbs.db
-ehthumbs.db
-desktop.ini
-
-# macOS
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Linux
-*~
-
-############################
-# Front-end
-
-# Node (por garantia,s e for usar no front mais tarde)
-node_modules/
-dist/
-npm-debug.log
-
-##########################
-# Arquivos sensíveis
-
-# Em caso de credenciais (mas ideal é usar variáveis de ambiente)
-*.env
-*.env.local
-
-# Outros
-*.class
-*.swp
-*.swo
+backend/.idea/
